tests/NormalTests/paczka2/big_fuzzy/93359657.err
Error in line 1: 4KOe21jOM2T S404 11,5
Error in line 5: 4KOe21jOM2T A732 5,8
Error in line 17: 4KOe21jOM2T S404 33,74
Error in line 21: QrIqTTzVu9 A132 96,9
Error in line 14: 4KOe21jOM2T S404 10,8
Error in line 22: S404 S404 9,4
Error in line 40: S404 A732 71,0
Error in line 54: 4KOe21jOM2T S250 6,7
Error in line 62: 4KOe21jOM2T A132 96,0
Error in line 60: 5GIA S250 71,0
Error in line 78: QrIqTTzVu9 S404 68,4
Error in line 86: QrIqTTzVu9 A732 5,6
Error in line 85: vGc A732 87,7
Error in line 68: ycD S404 165,2
Error in line 91: QrIqTTzVu9 A132 65,2
Error in line 113: ycD S250 7D,8
Error in line 123: 4KOe21jOM2T A732 22,6
Error in line 135: XwDNC S404 16,9
Error in line 136: XwDNC A132 45,0
Error in line 138: ycD S250 32,4
Error in line 133: 4KOe21jOM2T S250 224,6
Error in line 141: XwDNC S404 4,5
Error in line 140: vGc S404 50,1
Error in line 164: S404 A732 80,5
Error in line 165: XwDNC A132 13,4
Error in line 184: S404 S404 16,2
Error in line 180: 5GIA S404 82,2
Error in line 188: vGc S250 33,7
Error in line 201: XwDNC S250 89,1
Error in line 192: S404 A732 80,8
Error in line 211: 5GIA S250 82,0
Error in line 216: 4KOe21jOM2T A132 197,0
Error in line 207: S404 S404 71,2
Error in line 221: vGc S250 60,3
Error in line 226: vGc A732 -3,5
Error in line 219: 4KOe21jOM2T A732 43,1
Error in line 215: QrIqTTzVu9 A732 114,4
Error in line 247: XwDNC S404 32,73
